tests/baselines/reference/jsxCommentEmit(jsx=react-jsx,removecomments=false).errors.txt
file.tsx(2,13): error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.


==== file.tsx (1 errors) ====
    let x = "hi";
    const eg1 = <div>{x}/*mid*/{x}</div>;
                ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
    const eg2 = <div>/*pre*/{x}/*post*/</div>;
    const eg3 = <div>/*pre*/{x}/*mid*/{x}/*post*/</div>;
    const eg4 = <div>/*pre*/<span/>*post*/</div>;
    const eg5 = <div>/*pre*/{/*keep me*/}/*post*/</div>;
    